Project 3 - Type Checker/tests/parser/test021.parse.soln.yacc.err
test021.lgf:3.12-test021.lgf:3.13 Error: syntax error: deleting  COMMA
