Project 3 - Type Checker/tests/parser/test021.lgf
(* type constructor with missing type *)
type T ['a, 'b] = ('a -> 'b) -> 'a -> 'b
type U = T [, Integer]
; 0
